--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div class="project-card">
                 <h3>Personal Portfolio Website</h3>
                 <p>Created a responsive portfolio using HTML, CSS, and JavaScript with interactive sections and fade-in effects.</p>
-                <a href="https://github.com/yourgithub/project2" target="_blank">View on GitHub</a>
+                <a href="https://github.com/YohanCollado/Portfolio/" target="_blank">View on GitHub</a>
             </div>
-            <!-- Add more project cards here -->
+           
         </div>
     </section>
 
@@ -100,4 +100,5 @@
 
 </body>
 </html>
+
 
